Support CFG export from Ghidra to GTIRB